--- a/index.html
+++ b/index.html
@@ -15,46 +15,69 @@
   </head>
   <body>
     <h1>Library</h1>
-    <main class="container d-flex flex-wrap"></main>
-      <form action="">
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="title"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="title"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="title"
-          />
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Title</label>
-          <input
-            type="text"
-            class="form-control"
-            id="exampleFormControlInput1"
-            placeholder="title"
-          />
-        </div>
-    </div>
+    <main class="container d-flex flex-wrap">
+      <div class="formDiv">
+        <button id="newBookBtn">New Book</button>
+        <form action="">
+          <label for="title">Title</label>
+          <input type="text" name="title" id="title" placeholder="Title" />
+          <label for="author">Author</label>
+          <input type="text" name="author" id="author" placeholder="Author" />
+          <label for="pages">Pages</label>
+          <input type="text" name="pages" id="pages" placeholder="Pages" />
+          <div class="radioDiv">
+            <label for="read">Read</label>
+            <input type="radio" name="read" id="true" />
+            <label for="read">Not read</label>
+            <input type="radio" name="read" id="false" />
+          </div>
+        </form>
+      </div>
+    </main>
 
+    <!-- <form action="#">
+      <div class="mb-3">
+        <label for="title" class="form-label">Title</label>
+        <input
+          type="text"
+          class="form-control"
+          id="title"
+          placeholder="Title"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <label for="author" class="form-label">Author</label>
+        <input
+          type="text"
+          class="form-control"
+          id="author"
+          placeholder="Author"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <label for="pages" class="form-label">Pages</label>
+        <input
+          type="number"
+          class="form-control"
+          id="pages"
+          placeholder="Pages"
+          required
+        />
+      </div>
+      <div class="mb-3">
+        <label for="read" class="form-label">Read</label>
+        <input
+          type="text"
+          class="form-control"
+          id="read"
+          placeholder="Read"
+          required
+        />
+      </div>
+      <button type="submit">Add Book</button>
+    </form> -->
     <script src="app.js"></script>
   </body>
 </html>
