--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="container d-flex flex-wrap">
       <div class="formDiv">
         <button id="newBookBtn">New Book</button>
-        <form action="">
+        <form action="" class="invisible">
           <label for="title">Title</label>
           <input type="text" name="title" id="title" placeholder="Title" />
           <label for="author">Author</label>
