New books can now be added with form

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
             <label for="read">Not read</label>
             <input type="radio" name="read" id="false" />
           </div>
+          <button type="submit" id="addBookBtn">Add Book</button>
         </form>
       </div>
+      <div class="container cards d-flex flex-wrap"></div>
     </main>
 
     <!-- <form action="#">
