Inputs now empty when new book is added

--- a/index.html
+++ b/index.html
@@ -27,9 +27,19 @@
           <input type="text" name="pages" id="pages" placeholder="Pages" />
           <div class="radioDiv">
             <label for="read">Read</label>
-            <input type="radio" name="read" id="true" />
-            <label for="read">Not read</label>
-            <input type="radio" name="read" id="false" />
+            <input
+              type="radio"
+              name="readStatus"
+              id="dfasdfa"
+              value="dfasdfa"
+            />
+            <label for="notRead">Not read</label>
+            <input
+              type="radio"
+              name="readStatus"
+              id="dfasd"
+              value="faldfafdasfadse"
+            />
           </div>
           <button type="submit" id="addBookBtn">Add Book</button>
         </form>
