--- a/index.html
+++ b/index.html
@@ -25,22 +25,8 @@
           <input type="text" name="author" id="author" placeholder="Author" />
           <label for="pages">Pages</label>
           <input type="text" name="pages" id="pages" placeholder="Pages" />
-          <div class="radioDiv">
-            <label for="read">Read</label>
-            <input
-              type="radio"
-              name="readStatus"
-              id="dfasdfa"
-              value="dfasdfa"
-            />
-            <label for="notRead">Not read</label>
-            <input
-              type="radio"
-              name="readStatus"
-              id="dfasd"
-              value="faldfafdasfadse"
-            />
-          </div>
+          <label for="read">Read </label>
+          <input type="checkbox" name="read" id="read" />
           <button type="submit" id="addBookBtn">Add Book</button>
         </form>
       </div>
