--- a/index.html
+++ b/index.html
@@ -20,11 +20,29 @@
         <button id="newBookBtn">New Book</button>
         <form action="" class="invisible">
           <label for="title">Title</label>
-          <input type="text" name="title" id="title" placeholder="Title" />
+          <input
+            type="text"
+            name="title"
+            id="title"
+            placeholder="Title"
+            required
+          />
           <label for="author">Author</label>
-          <input type="text" name="author" id="author" placeholder="Author" />
+          <input
+            type="text"
+            name="author"
+            id="author"
+            placeholder="Author"
+            required
+          />
           <label for="pages">Pages</label>
-          <input type="text" name="pages" id="pages" placeholder="Pages" />
+          <input
+            type="number"
+            name="pages"
+            id="pages"
+            placeholder="Pages"
+            required
+          />
           <label for="read">Read </label>
           <input type="checkbox" name="read" id="read" />
           <button type="submit" id="addBookBtn">Add Book</button>
